2024-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update usage numbers

	* README.md: Remove StackOverflow badge which only works for
	logged-in users and is unsuitable for the README

2024-01-08  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Release 1.0.12

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * vignettes/rmd/Rcpp.bib: Idem
        * inst/bib/Rcpp.bib: Idem
	* vignettes/pdf/*: Rebuilt

2024-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp.bib: Updated to current versions of cited packages
        * inst/bib/Rcpp.bib: Idem

2023-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/api.cpp (type2name): Refine OBJSXP return

2023-12-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/api.cpp (type2name): Recognise OBJSXP added in R 4.4.0

2023-11-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/testRcppInterfaceExporter/R/RcppExports.R: Regenerated
	* inst/tinytest/testRcppInterfaceExporter/src/RcppExports.cpp: Idem

2023-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* src/attributes.cpp (generateCpp): Add a format string for Rf_error
	call to not run afoul of -Wformat-security

2023-11-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* inst/include/Rcpp/iostream/Rstreambuf.h: Cast streamsize to int in
	two spots
	* inst/include/Rcpp/print.h (warningcall): Add missing '%s' format

2023-11-11  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp-FAQ.Rmd: Updated and edited
	* vignettes/pdf/Rcpp-FAQ.pdf: Updated
	* vignettes/rmd/Rcpp.bib: Updated

2023-10-28  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp-FAQ.Rmd: Updated and edited
	* vignettes/pdf/Rcpp-FAQ.pdf: Updated
	* vignettes/rmd/Rcpp.bib: Updated
